unpackaged/main/default/objects/Opportunity/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <description>Captures the type of contract associated with this Opportunity</description>
    <inlineHelpText>What type of Contract this Opportunity is related to</inlineHelpText>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MSA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Payor Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>