unpackaged/main/default/objects/Opportunity/fields/Deal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deal_Amount__c</fullName>
    <description>Eligibile Lives x 2% population x 5% engagement x 3.4 visits at $390 per visit</description>
    <formula>Eligible_Lives__c * 1.326</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Eligibile Lives x 2% population x 5% engagement x 3.4 visits at $390 per visit</inlineHelpText>
    <label>Deal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>