unpackaged/main/default/objects/Opportunity/fields/Eligible_Lives__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Lives__c</fullName>
    <description>Applies only to Health Plan (Health Plan Eligible Lives) and Employer (Total Eligible Lives) Accounts</description>
    <inlineHelpText>Applies only to Health Plan (Health Plan Eligible Lives) and Employer (Total Eligible Lives) Accounts</inlineHelpText>
    <label>Eligible Lives</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>