unpackaged/main/default/objects/Opportunity/fields/Lead_Specific__c.field-meta.xml
<CustomField>
    <fullName>Lead_Specific__c</fullName>
    <description>Additional, specific, information about the source of the Lead converted to this Opportunity</description>
    <inlineHelpText>Additional, specific, information about the source of the Lead converted to this Opportunity</inlineHelpText>
    <label>Lead Specific</label>
    <type>TextArea</type>
</CustomField>