unpackaged/main/default/objects/Opportunity/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary Contact, when in doubt start with this person</description>
    <inlineHelpText>Primary Contact, when in doubt start with this person</inlineHelpText>
    <label>Primary Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>