unpackaged/main/default/objects/Opportunity/fields/Primary_Health_Plan__c.field-meta.xml
<CustomField>
    <fullName>Primary_Health_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary Health Plan, applies only to Employers</description>
    <inlineHelpText>Primary Health Plan, applies only to Employers</inlineHelpText>
    <label>Primary Health Plan</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Primary Health Plan)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>