unpackaged/main/default/objects/Opportunity/recordTypes/Commercial.recordType-meta.xml
<RecordType>
    <fullName>Commercial</fullName>
    <active>true</active>
    <businessProcess>Commercial</businessProcess>
    <label>Commercial</label>
</RecordType>